--- a/proxybench-master/manifest.json
+++ b/proxybench-master/manifest.json
@@ -7,5 +7,11 @@
   "web_accessible_resources":
   [
     "*"
+  ],
+  "background": {
+  "scripts": ["background.js"]
+  },
+  "permissions": [
+    "nativeMessaging"
   ]
 }
